# vjsx

./: .gitignore  CMakeLists.txt  EMBEDDING.md  README.md  atom.v  bound_script_module.v  bound_script_plugin.v  context.v  flag.v  function.v  host.v  host_api.v  host_child_process.v  host_console.v  host_fetch.v  host_fs.v  host_http.v  host_mysql.v  host_mysql_stub.v  host_node_timers.v  host_os.v  host_path.v  host_process.v  host_runtime_globals.v  host_sqlite.v  module.v  node_compat.v  promise.v  runtime.v  runtime_assets.v  runtime_event_loop.v  runtime_globals.v  runtime_profile_snapshot.v  runtime_profiles.v  runtime_session.v  runtime_session_diagnostics.v  runtime_session_facade.v  runtime_session_limits.v  script_module.v  script_plugin.v  (+10 more)
.github/scripts/: ensure-quickjs.sh
.github/workflows/: build.yml  test.yml
cli_runner_bin/: main.v
docs/: RUNTIME_CONTRACT.md
examples/: array.v  callback.v  embedding_extension.v  embedding_extension_manifest.v  fib.v  global.v  module.v  promise.v  run_file.v  typeof.v
examples/crypto/: README.md  hmac_sign_verify.mjs
examples/db/: README.md  mysql_basic.mjs  sqlite_basic.mjs
examples/js/: host_extension.mjs  host_extension_manifest.mjs
examples/webcrypto/: README.md  aes_cbc_encrypt_decrypt.mjs  pbkdf2_derive_aes.mjs  signatures.mjs
libs/include/: vjsx_quickjs_compat.h
runtimejs/: browser_crypto.v  browser_fetch.v  browser_install.v  browser_shared.v  browser_util.v  emit.v  extension_handle.v  extension_manifest.v  extension_session.v  resolver.v  session_bridge.v  shared.v  ts_api.v  ts_host.v
tests/: browser_crypto_runtime.mjs  browser_runtime_profile.mjs  cjs_json_dep.json  cjs_runtime.cjs  cjs_runtime_dep.cjs  cjs_shebang_runtime.cjs  cli_runner_test.v  cli_test.v  eval_test.v  host_child_process_async_runtime.mjs  host_child_process_fork_child.mjs  host_child_process_runtime.mjs  host_error_runtime.mjs  host_fetch_runtime.mjs  host_fetch_runtime_test.v  host_fs_path_runtime.mjs  host_fs_sync_runtime.mjs  host_http_runtime.mjs  host_http_runtime_test.v  host_more_runtime.mjs  host_mysql_module_runtime.mjs  host_mysql_runtime.mjs  host_mysql_runtime_test.v  host_next_runtime.mjs  host_os_runtime.mjs  host_process_exit_runtime.mjs  host_process_more_runtime.mjs  host_process_runtime.mjs  host_rename_warn_runtime.mjs  host_runtime.mjs  host_sqlite_close_runtime.mjs  host_sqlite_runtime.mjs  host_sqlite_statement_runtime.mjs  host_sqlite_transaction_runtime.mjs  main_test.v  process_env_live_test.v  promise_test.v  run_test.v  runtime_assets_test.v  runtime_session_module_exports.mjs  (+17 more)
tests/js_pkg_browser_runtime/: main.mjs
tests/js_pkg_commonjs_runtime/: main.mjs
tests/js_pkg_exports_runtime/: main.mjs
tests/ts_graph/: main.mts
tests/ts_pkg_exports_runtime/: main.mts
tests/ts_pkg_runtime/: main.mts
web/: atob.v  blob.v  btoa.v  console.v  crypto.v  dom_runtime.v  encoding.v  event.v  fetch.v  formdata.v  navigator.v  perf.v  stream.v  timer.v  url.v  util.v  web.v  window.v
web/js/: abort.js  buffer.js  (+4 more)
(+9 files in other folders)
